// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateInput.vue > snapshot tests 1`] = `
"<div data-v-a3baa652="" class="date-input"><label data-v-a3baa652="">DateInput test <input data-v-a3baa652="" class="tw-text-base md:tw-text-sm focus:tw-outline-none tw-text-G1 placeholder:tw-text-G3" placeholder="YYYY.MM.DD"></label><button data-v-a3baa652="" class=""><svg data-v-a3baa652="" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
      <path data-v-a3baa652="" d="M14.25 4.8075L13.1925 3.75L9 7.9425L4.8075 3.75L3.75 4.8075L7.9425 9L3.75
          13.1925L4.8075 14.25L9 10.0575L13.1925 14.25L14.25 13.1925L10.0575 9L14.25 4.8075Z"></path>
    </svg></button></div>"
`;

exports[`DateInput.vue > snapshot tests 2`] = `
"<div data-v-a3baa652="" class="date-input"><label data-v-a3baa652="">DateInput test <input data-v-a3baa652="" class="tw-text-base md:tw-text-sm focus:tw-outline-none tw-text-G1 placeholder:tw-text-G3" placeholder="YYYY.MM.DD"></label><button data-v-a3baa652="" class="hidden"><svg data-v-a3baa652="" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
      <path data-v-a3baa652="" d="M14.25 4.8075L13.1925 3.75L9 7.9425L4.8075 3.75L3.75 4.8075L7.9425 9L3.75
          13.1925L4.8075 14.25L9 10.0575L13.1925 14.25L14.25 13.1925L10.0575 9L14.25 4.8075Z"></path>
    </svg></button></div>"
`;
